# rag-document-qa

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: aws.yaml  azure.yaml  config.yaml  gcp.yaml
eval/: evaluate.py  sample_dataset.json
src/: config.py  main.py
src/api/: models.py  routes.py
src/embeddings/: __init__.py  azure_embed.py  base.py  bedrock_embed.py  factory.py  hf_embed.py  openai_embed.py
src/generation/: __init__.py  chain.py  prompts.py
src/ingestion/: __init__.py  chunkers.py  loaders.py  pipeline.py
src/llm/: __init__.py  azure_provider.py  base.py  bedrock_provider.py  factory.py  openai_provider.py  vertex_provider.py
src/retrieval/: __init__.py  hybrid.py  reranker.py  vectorstore.py
src/vectorstore/: __init__.py  base.py  chroma_store.py  factory.py  faiss_store.py  pgvector_store.py  pinecone_store.py  weaviate_store.py
tests/: conftest.py  test_api.py  test_chunkers.py  test_llm_providers.py  test_loaders.py  test_retrieval.py  test_vectorstores.py
