[project]
name = "rag-document-qa"
version = "0.1.0"
description = "Production RAG pipeline for document question answering"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # assert allowed in tests
    "S105",   # hardcoded passwords in config defaults are fine
    "S104",   # binding to 0.0.0.0 is intentional for Docker
    "S608",   # SQL table names from config, not user input
    "B008",   # function call in default arg (FastAPI Depends)
    "B904",   # raise from in except (stylistic)
    "B905",   # zip strict (not needed)
    "SIM105", # contextlib.suppress (readability preference)
    "RUF022", # __all__ sort order
    "F841",   # unused variable in except handler
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
